--- a/core/http/views/standalone_index.html
+++ b/core/http/views/standalone_index.html
@@ -80,7 +80,7 @@
       {{else}}
       <div class="flex flex-col gap-3 items-center justify-center px-6 py-8 mx-auto">
         <div class="header text-center py-6">
-          <h1 class="text-5xl font-bold text-gray-100">Nebula</h1>
+          <h1 class="text-5xl font-bold text-gray-100">Swarmind</h1>
         </div>
         <form id="login" class="space-y-4" action="/login" method="post">
           <div>
