--- a/core/http/static/general.css
+++ b/core/http/static/general.css
@@ -55,11 +55,17 @@ body {
 }
 
 .user {
-    background-color: #007bff;
+    background-color: #4b5563;
 }
 
 .assistant {
-    background-color: #28a745;
+    background-color: #367f4b;
+}
+
+.hljs {
+    font-size: 0.875rem;
+    border-radius: 0.25rem;
+    margin-bottom: 0.5rem;
 }
 
 .message {
@@ -72,22 +78,43 @@ body {
     margin: 0.5rem;
 }
 
-ul {
+div#messages h1, h2, h3, h4, h5, h6 {
+    font-weight: 600;
+}
+div#messages h1 {
+    font-size: 2.125rem;
+}
+
+div#messages h2 {
+    font-size: 1.875rem;
+}
+
+div#messages h3 {
+    font-size: 1.5rem;
+}
+
+div#messages h4 {
+    font-size: 1.25rem;
+}
+
+div#messages h5 {
+    font-size: 1.125rem;
+}
+
+div#messages h6 {
+    font-size: 1rem;
+}
+
+div#messages ul, ol {
+    padding-left: 1.25rem !important; /* Indents the list from the left margin */
+    margin-top: 0.5rem !important; /* Space above the list */
+    margin-bottom: 0.5rem !important; /* Space above the list */
+}
+
+div#messages ul {
     list-style-type: disc; /* Adds bullet points */
-    padding-left: 1.25rem; /* Indents the list from the left margin */
-    margin-top: 1rem; /* Space above the list */
 }
 
-li {
-    font-size: 0.875rem; /* Small text size */
-    color: #4a5568; /* Dark gray text */
-   /*  background-color: #f7fafc; Very light gray background */
-    border-radius: 0.375rem; /* Rounded corners */
-    padding: 0.5rem; /* Padding inside each list item */
-    /*box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);  Subtle shadow */
-    margin-bottom: 0.5rem; /* Vertical space between list items */
-}
-
-li:last-child {
-    margin-bottom: 0; /* Removes bottom margin from the last item */
+div#messages ol {
+    list-style-type: decimal;
 }
