--- a/core/http/views/chat.html
+++ b/core/http/views/chat.html
@@ -29,6 +29,7 @@ SOFTWARE.
 <html lang="en">
   {{template "views/partials/head" .}}
   <script defer src="static/chat.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.11.1/build/styles/dark.min.css">
   <style>
     body {
         overflow: hidden; 
@@ -40,14 +41,25 @@ SOFTWARE.
     {{template "views/partials/navbar" .}}
     <div class="chat-container mt-2 mr-2 ml-2 mb-2 bg-gray-800 shadow-lg rounded-lg" >
      <!-- Chat Header -->
-    <div class="border-b border-gray-700 p-4"  x-data="{ component: 'menu' }">
+    <div class="border-b border-gray-700 px-4 py-2"  x-data="{ component: 'menu' }">
 
       <div class="flex items-center justify-between">
 
-      <h1 class="text-lg font-semibold"> <i class="fa-solid fa-comments"></i> Chat with {{.Model}} <a href="https://localai.io/features/text-generation/" target="_blank" >
-        <i class="fas fa-circle-info pr-2"></i>
-      </a></h1>
+      <a data-dropdown-toggle="dropdownModelSelect" class="text-gray-400 hover:text-white px-3 py-2 rounded transition hover:cursor-pointer"><i class="fa-solid fa-comments pr-2"></i> <label id="dropdownModelsText" class="hover:cursor-pointer">{{ .Model }}</label> <i class="text-sm fa-solid fa-caret-down pl-1"></i></a>
+      <div id="dropdownModelSelect" class="z-10 hidden bg-gray-800 border border-gray-700 shadow-lg rounded-lg">
+          <div class="p-3 flex flex-col gap-3">
+              {{ $model:=.Model}}
+              {{ range .ModelsConfig }}
+              {{ if not (eq . $model) }}
+              <a href="chat/{{.}}" class="block text-sm text-gray-400 transition hover:text-white rounded"> {{.}} </a>
+              {{ end }}
+              {{ end }}
+          </div>
+      </div>
       <div x-show="component === 'menu'" id="menu">
+        <button @click="component = 'system_prompt'" title="System Prompt"
+        class="mx-1 px-6 py-2 rounded-lg text-sm text-gray-400 border border-gray-400 transition hover:text-white hover:bg-gray-600"
+        >Set system prompt</button>
         <button
           @click="$store.chat.clear()"
           id="clear"
@@ -55,30 +67,11 @@ SOFTWARE.
 
           data-twe-ripple-init
           data-twe-ripple-color="light"
-          class="m-2 float-right inline-block rounded bg-primary px-6 pb-2.5 mb-3 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong"
+          class="mx-1 px-6 py-2 rounded-lg text-sm text-gray-400 border border-gray-400 transition hover:text-white hover:bg-gray-600"
           >
-          Clear chat 🔥
+          Clear chat  🔥
         </button>
-        <button @click="component = 'key'" title="Update API key"
-        class="m-2 float-right inline-block rounded bg-primary px-6 pb-2.5 mb-3 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong"
-        >Set API Key🔑</button>
-        <button @click="component = 'system_prompt'" title="System Prompt"
-        class="m-2 float-right inline-block rounded bg-primary px-6 pb-2.5 mb-3 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong"
-        >Set system prompt</button>
       </div>
-      <form x-show="component === 'key'" id="key">
-        <input
-          type="password"
-          id="apiKey"
-          name="apiKey"
-          class="bg-gray-800 text-white border border-gray-600 focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50 rounded-md shadow-sm p-2 appearance-none"
-          placeholder="OpenAI API Key"
-          x-model.lazy="key"
-        />
-        <button @click="component = 'menu'" type="submit" title="Save API key">
-          <i class="fa-solid fa-arrow-right"></i>
-        </button>
-      </form>
       <form x-show="component === 'system_prompt'" id="system_prompt">
         <textarea
           type="text"
@@ -93,26 +86,12 @@ SOFTWARE.
         </button>
       </form>
 
-      <select x-data="{ link : '' }" x-model="link" x-init="$watch('link', value => window.location = link)" 
-        class="bg-gray-800 text-white border border-gray-600 focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50 rounded-md shadow-sm p-2 appearance-none"
-        >	
-        <!-- Options -->
-        <option value="" disabled class="text-gray-400" >Select a model</option>
-        {{ $model:=.Model}}
-        {{ range .ModelsConfig }}
-        {{ if eq . $model }}
-        <option value="chat/{{.}}" selected  class="bg-gray-700 text-white">{{.}}</option>
-        {{ else }}
-        <option value="chat/{{.}}" class="bg-gray-700 text-white">{{.}}</option>
-        {{ end }}
-        {{ end }}
-      </select>
 
       </div>
     </div>
 
     <div class="chat-messages p-4" id="chat" x-data="{history: $store.chat.history}">
-      <p id="usage" x-show="history.length === 0">
+      <p id="usage" x-show="history.length === 0" class="text-gray-400">
         Start chatting with the AI by typing a prompt in the input field below and pressing Enter.
         For models that support images, you can upload an image by clicking the paperclip <i class="fa-solid fa-paperclip"></i> icon.
       </p>
@@ -120,9 +99,9 @@ SOFTWARE.
       <template x-for="message in history">
         <div class="message flex items-start space-x-2 my-2" >
           <!--<img :src="message.role === 'user' ? '/path/to/user-icon.png' : '/path/to/bot-icon.png'" alt="" class="h-6 w-6">-->
-          <i class="fa-solid h-8 w-8" :class="message.role === 'user' ? 'fa-user' : 'fa-robot'"  ></i>
+          <i class="fa-solid w-4 h-4 text-right text-xs mr-1" :class="message.role === 'user' ? 'fa-user' : 'fa-robot'"  ></i>
           <div class="flex flex-col flex-1">
-            <span class="text-xs font-semibold text-gray-600" x-text="message.role === 'user' ? 'User' : 'Assistant ({{.Model}})'"></span>
+            <span class="text-xs font-semibold text-gray-400" x-text="message.role === 'user' ? 'User' : 'Assistant ({{.Model}})'"></span>
             <template x-if="message.role === 'user'">
               <div class="p-2 flex-1 rounded" :class="message.role" x-html="message.html"></div>
             </template>
@@ -149,7 +128,7 @@ SOFTWARE.
                   name="input"
                   x-model="inputValue"
                   placeholder="Send a message..."
-                  class="p-2 pl-2 border rounded w-full bg-gray-600 text-white placeholder-gray-300"
+                  class="p-2 pl-2 border rounded-lg w-full bg-gray-700 text-white placeholder-gray-300"
                   required
                   @keydown.shift="shiftPressed = true"
                   @keyup.shift="shiftPressed = false"
@@ -175,23 +154,15 @@ SOFTWARE.
             const N = this.history.length - 1;
             if (this.history.length && this.history[N].role === role) {
               this.history[N].content += content;
-              str = this.history[N].content;
+              <!-- str = this.history[N].content; -->
               this.history[N].html = DOMPurify.sanitize(
                 marked.parse(this.history[N].content),
               );
             } else {
-              c =  ""
-              // split content newlines in content
-              const lines = content.split("\n");
-              // for each line, do DOMPurify.sanitize(marked.parse(line)) and add it to c
-              lines.forEach((line) => {
-                c += DOMPurify.sanitize(marked.parse(line));
-              });
-
               this.history.push({
                 role: role,
                 content: content,
-                html: c,
+                html: DOMPurify.sanitize(marked.parse(content)),
                 image: image,
               });
             }
@@ -207,7 +178,7 @@ SOFTWARE.
               const language = el.className.split("language-")[1];
               if (this.languages.includes(language)) return;
               const script = document.createElement("script");
-              script.src = `https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.8.0/build/languages/${language}.min.js`;
+              script.src = `https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.11.1/build/languages/${language}.min.js`;
               document.head.appendChild(script);
               this.languages.push(language);
             });
