--- a/core/http/views/partials/navbar.html
+++ b/core/http/views/partials/navbar.html
@@ -4,7 +4,7 @@
             <div class="flex items-center">
                 <!-- Logo Image: Replace 'logo_url_here' with your actual logo URL -->
                 <a href="./" class="text-white text-xl font-bold"><img src="https://github.com/go-skynet/LocalAI/assets/2420543/0966aa2a-166e-4f99-a3e5-6c915fc997dd" alt="LocalAI Logo" class="h-10 mr-3 border-2 border-gray-300 shadow rounded"></a>
-                <a href="./" class="text-white text-xl font-bold">Nebula</a>
+                <a href="./" class="text-white text-xl font-bold">Swarmind</a>
             </div>
             <!-- Menu button for small screens -->
             <div class="lg:hidden">
@@ -14,13 +14,13 @@
             </div>
             <!-- Navigation links -->
             <div class="hidden lg:flex lg:items-center lg:justify-end lg:flex-1 lg:w-0">
-                <a href="chat/" class="text-gray-400 hover:text-white px-3 py-2 rounded"><i class="fa-solid fa-comments pr-2"></i> Chat </a>
-                <a href="text2image/" class="text-gray-400 hover:text-white px-3 py-2 rounded"><i class="fas fa-image pr-2"></i> Generate images </a>
-                <a href="tts/" class="text-gray-400 hover:text-white px-3 py-2 rounded"><i class="fa-solid fa-music pr-2"></i> TTS </a>
-                <a href="talk/" class="text-gray-400 hover:text-white px-3 py-2 rounded"><i class="fa-solid fa-phone pr-2"></i> Talk </a>
+                <a href="chat/" class="text-gray-400 transition hover:text-white px-3 py-2 rounded"><i class="fa-solid fa-comments pr-2"></i> Chat </a>
+                <a href="text2image/" class="text-gray-400 transition hover:text-white px-3 py-2 rounded"><i class="fas fa-image pr-2"></i> Generate images </a>
+                <a href="tts/" class="text-gray-400 transition hover:text-white px-3 py-2 rounded"><i class="fa-solid fa-music pr-2"></i> TTS </a>
+                <a href="talk/" class="text-gray-400 transition hover:text-white px-3 py-2 rounded"><i class="fa-solid fa-phone pr-2"></i> Talk </a>
                 <div class="w-px mx-2 self-stretch bg-gradient-to-tr from-transparent via-neutral-500 to-transparent opacity-25 dark:via-neutral-400"></div>
-                <a data-dropdown-toggle="dropdownHeadSelect" class="text-gray-400 hover:text-white px-3 py-2 rounded capitalize hover:cursor-pointer"><i class="fa-solid fa-server pr-2"></i> <label id="dropdownHeadText" class="hover:cursor-pointer">{{ .Head }}</label> <i class="text-sm fa-solid fa-caret-down pl-1"></i></a>
-                <div id="dropdownHeadSelect" class="z-10 hidden bg-gray-800 shadow-lg rounded-lg">
+                <a data-dropdown-toggle="dropdownHeadSelect" class="text-gray-400 transition hover:text-white px-3 py-2 rounded capitalize hover:cursor-pointer"><i class="fa-solid fa-server pr-2"></i> <label id="dropdownHeadText" class="hover:cursor-pointer">{{ .Head }}</label> <i class="text-sm fa-solid fa-caret-down pl-1"></i></a>
+                <div id="dropdownHeadSelect" class="z-10 hidden bg-gray-800 border border-gray-700 shadow-lg rounded-lg">
                     <div class="p-3 flex flex-col gap-3">
                         {{ range .Heads }}
                         <div class="inline-flex items-center">
@@ -29,12 +29,12 @@
                                 <span class="absolute bg-gray-300 w-2 h-2 rounded-full opacity-0 peer-checked:opacity-100 transition-opacity duration-200 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
                                 </span>
                             </label>
-                            <label class="ml-2 text-sm text-gray-400 hover:text-white cursor-pointer capitalize" for="head-select-{{.}}"> {{.}} </label>
+                            <label class="ml-2 text-sm text-gray-400 transition hover:text-white cursor-pointer capitalize" for="head-select-{{.}}"> {{.}} </label>
                         </div>
                         {{ end }}
                     </div>
                 </div>
-                <div class="px-3 text-gray-400 hover:text-white hover:cursor-pointer">
+                <div class="px-3 text-gray-400 transition hover:text-white hover:cursor-pointer">
                     <a data-dropdown-toggle="dropdownAccount">
                         <p class="text-base"><i class="text-sm fa-solid fa-user pr-2"></i>{{.Username}}</p>
                         <p id="usage-text" class="first-letter:uppercase text-sm {{if .Reason}} text-red-200 {{end}}">
@@ -49,10 +49,10 @@
                         {{end}}</p>
                     </a>
                 </div>
-                <div id="dropdownAccount" class="z-10 hidden bg-gray-800 shadow-lg rounded-lg">
+                <div id="dropdownAccount" class="z-10 hidden bg-gray-800 border border-gray-700 shadow-lg rounded-lg">
                     <div class="p-3 flex flex-col gap-3">
-                        <a href="settings" class="block text-sm text-gray-400 hover:text-white rounded"><i class="text-base fa-solid fa-gear pr-1"></i> Account </a>
-                        <a href="logout" class="block text-sm text-gray-400 hover:text-white rounded"><i class="text-base fa-solid fa-right-from-bracket pr-1"></i> Logout </a>
+                        <a href="settings" class="block text-sm text-gray-400 transition hover:text-white rounded"><i class="text-base fa-solid fa-gear pr-1"></i> Account </a>
+                        <a href="logout" class="block text-sm text-gray-400 transition hover:text-white rounded"><i class="text-base fa-solid fa-right-from-bracket pr-1"></i> Logout </a>
                     </div>
                 </div>
             </div>
@@ -60,13 +60,13 @@
         <!-- Collapsible menu for small screens -->
         <div class="hidden lg:hidden" id="mobile-menu">
             <div class="flex flex-col pt-4 pb-3">
-                <div class="px-3 py-2 text-gray-400 hover:text-white">
+                <div class="px-3 py-2 text-gray-400 transition hover:text-white">
                     <a href="/settings#payment">
                         <p class="text-xl"><i class="text-base fa-solid fa-user pr-2"></i>{{.Username}}</p>
                         <p id="mobile-usage-text" class="text-sm">{{if lt (int .Usage.Limit) 0}}Unlimited tokens{{else}}{{.Balance}} tokens{{end}}</p>
                     </a>
                 </div>
-                <a id="mobile-head-select" class="text-gray-400 hover:text-white px-3 py-2 rounded mt-1 capitalize"><i class="fa-solid fa-server pr-2"></i> <label id="dropdownHeadMobileText">{{.Head}}</label> <i class="text-sm fa-solid fa-caret-down pl-1"></i></a>
+                <a id="mobile-head-select" class="text-gray-400 transition hover:text-white px-3 py-2 rounded mt-1 capitalize"><i class="fa-solid fa-server pr-2"></i> <label id="dropdownHeadMobileText">{{.Head}}</label> <i class="text-sm fa-solid fa-caret-down pl-1"></i></a>
                 <div id="mobile-head-menu" class="hidden">
                     <div class="p-3 flex flex-col gap-3">
                         {{ range .Heads }}
@@ -76,19 +76,19 @@
                                 <span class="absolute bg-gray-300 w-2 h-2 rounded-full opacity-0 peer-checked:opacity-100 transition-opacity duration-200 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
                                 </span>
                             </label>
-                            <label class="ml-2 text-base text-gray-400 hover:text-white cursor-pointer capitalize" for="mobile-head-select-{{.}}"> {{.}} </label>
+                            <label class="ml-2 text-base text-gray-400 transition hover:text-white cursor-pointer capitalize" for="mobile-head-select-{{.}}"> {{.}} </label>
                         </div>
                         {{end}}
                     </div>
                 </div>
                 <hr class="my-2 h-px border-t-0 bg-transparent bg-gradient-to-r from-transparent via-neutral-500 to-transparent opacity-25 dark:via-neutral-400" />
-                <a href="chat/" class="block text-gray-400 hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-comments pr-2"></i> Chat </a>
-                <a href="text2image/" class="block text-gray-400 hover:text-white px-3 py-2 rounded mt-1"><i class="fas fa-image pr-2"></i> Generate images </a>
-                <a href="tts/" class="block text-gray-400 hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-music pr-2"></i> TTS </a>
-                <a href="talk/" class="block text-gray-400 hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-phone pr-2"></i> Talk </a>
+                <a href="chat/" class="block text-gray-400 transition hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-comments pr-2"></i> Chat </a>
+                <a href="text2image/" class="block text-gray-400 transition hover:text-white px-3 py-2 rounded mt-1"><i class="fas fa-image pr-2"></i> Generate images </a>
+                <a href="tts/" class="block text-gray-400 transition hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-music pr-2"></i> TTS </a>
+                <a href="talk/" class="block text-gray-400 transition hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-phone pr-2"></i> Talk </a>
                 <hr class="my-2 h-px border-t-0 bg-transparent bg-gradient-to-r from-transparent via-neutral-500 to-transparent opacity-25 dark:via-neutral-400" />
-                <a href="settings" class="block text-gray-400 hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-gear pr-2"></i> Account </a>
-                <a href="logout" class="block text-gray-400 hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-right-from-bracket pr-2"></i> Logout </a>
+                <a href="settings" class="block text-gray-400 transition hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-gear pr-2"></i> Account </a>
+                <a href="logout" class="block text-gray-400 transition hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-right-from-bracket pr-2"></i> Logout </a>
             </div>
         </div>
     </div>
@@ -101,6 +101,7 @@
             if (headEls[i].checked) {
                 document.cookie="LocalAI-Head=" + headEls[i].value + "; path=/;";
                 document.getElementById('dropdownHeadText').textContent = headEls[i].value;
+                location.reload();
             }
         }
     }
