--- a/core/http/views/chat.html
+++ b/core/http/views/chat.html
@@ -103,13 +103,19 @@ SOFTWARE.
           <div class="flex flex-col flex-1">
             <span class="text-xs font-semibold text-gray-400" x-text="message.role === 'user' ? 'User' : 'Assistant ({{.Model}})'"></span>
             <template x-if="message.role === 'user'">
-              <div class="p-2 flex-1 rounded" :class="message.role" x-html="message.html"></div>
+              <div class="p-2 flex-1 rounded-lg" :class="message.role" x-html="message.html"></div>
             </template>
             <template x-if="message.role === 'assistant'">
-              <div class="p-2 flex-1 rounded" :class="message.role" x-html="message.html"></div>
+              <div class="p-2 flex-1 rounded-lg" :class="message.role" x-html="message.html"></div>
             </template>
             <template x-if="message.image">
               <img :src="message.image" alt="Image" class="rounded-lg mt-2 h-36 w-36">
+            </template>
+            <template x-if="message.usage && message.role === 'assistant'">
+              <span class="text-xs text-gray-400 text-right pr-4" x-text="'Completion tokens: ' + message.usage.completion_tokens + ', generation ' + message.usage.timing_token_generation.toFixed(1) + 'ms'"></span>
+            </template>
+            <template x-if="message.usage && message.role === 'user'">
+              <span class="text-xs text-gray-400 text-right pr-4" x-text="'Prompt tokens: ' + message.usage.prompt_tokens + ', generation ' + message.usage.timing_prompt_processing.toFixed(1) + 'ms'"></span>
             </template>
           </div>
         </div>
@@ -128,7 +134,7 @@ SOFTWARE.
                   name="input"
                   x-model="inputValue"
                   placeholder="Send a message..."
-                  class="p-2 pl-2 border rounded-lg w-full bg-gray-700 text-white placeholder-gray-300"
+                  class="p-2 pl-2 border border-gray-600 rounded-lg w-full bg-gray-700 text-white placeholder-gray-300"
                   required
                   @keydown.shift="shiftPressed = true"
                   @keyup.shift="shiftPressed = false"
@@ -149,6 +155,14 @@ SOFTWARE.
           languages: [undefined],
           clear() {
             this.history.length = 0;
+          },
+          submitUsage(usage) {
+            const N = this.history.length - 1;
+            assistantMsg = this.history[N]
+            userMsg = this.history[N - 1]
+            console.log(usage)
+            assistantMsg.usage = usage
+            userMsg.usage = usage
           },
           add(role, content, image) {
             const N = this.history.length - 1;
